--- a/README
+++ b/README
@@ -1,7 +1,33 @@
-Business Model Canvas
-=====================
+# Business Model Canvas for Vim
 
-A template session for the BMC in vim.
-Each cell is stored in a single file,
-the vim session displays them in the typical
-BMC grid.
+Enjoy iterating your kick-ass business model with your favorite text editor.
+
+> This is my first (usefull) public repository on github. Feedback is much appreciated.
+
+## Description
+
+Translation of the Business Model Canvas of [strategyzer.com] into a vim
+session, ready for crunch time. The session file ``bmc.vim`` tiles vim into the
+well-known grid of the Business Model Canvas. Each split contains a file
+corresponding to an element of your model.
+
+[screenshot.png](screenshot)
+
+
+## Features
+
+- Setup a BMC template.
+- Restore your last view of the BMC.
+- Keep your BMC under the version control of your choice. Go crazy and come back like it should be.
+- Iterate superfast with your wizardly team of highly trained monkeys from close and from afar.
+- Free up that whiteboard for more relevant doodles.
+
+
+## Basic Usage:
+
+- Clone this repository ``git clone https://github.com/chaosvector/business-model-canvas-for-vim.git``
+- To edit your BMC ``vim -S bmc.vim`` (only tested in NeoVim)
+- To save all of your changes type ``:wa``
+- To quit your BMC ``:qa``
+
+Anything else is in the hands of your vim mastery...
